# VAST-challenge-2021-MC2

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
data/processed/: anomaly_transactions.csv  cc_clean.csv  cc_loyalty_match_candidates.csv  cc_loyalty_matched.csv  location_category.csv  location_daily_summary.csv  location_hourly_summary.csv  loyalty_clean.csv  transactions_long.csv
docs/: data_dictionary.md  data_inventory.md  member_a_plan.md  project_plan.md
notebooks/: 01_data_overview_消费异常.ipynb
reports/: final_report.md
scripts/: create_q1_notebook.py  export_figures.py  prepare_data.py
src/vast_mc2/: config.py
